--- a/web/styles.css
+++ b/web/styles.css
@@ -16,16 +16,16 @@ time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
-  font: inherit;
+  font: georgia;
   vertical-align: baseline;
 }
 
 body {
   padding:10px 50px 0 0;
-  font-family:"Helvetica Neue", Helvetica, Arial, sans-serif;
-	font-size: 14px;
+  font-family:"Helvetica Neue", Georgia, serif;
+	font-size: 15px;
 	color: #232323;
-	background-color: #FBFAF7;
+	background-color: #FFFFFF;
 	margin: 0;
 	line-height: 1.8em;
 	-webkit-font-smoothing: antialiased;
@@ -33,7 +33,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color:#232323;
+  color:#003366;
   margin:30px 0 2px;
 }
 
@@ -42,8 +42,8 @@ p, ul, ol, table, dl {
 }
 
 h1, h2, h3 {
-	font-family: Arial, Monaco, serif;
-  line-height:1.3;
+	font-family: Georgia, serif;
+        line-height:1.3;
 	font-weight: normal;
 }
 
@@ -57,8 +57,9 @@ h1,h2, h3 {
 h1 {
 	font-size: 30px;
         padding-top: 5px;
-        background-color:#eeeeee;
+        background-color:#000066;
         text-align: center;
+        color:#FFFFFF;
 }
 
 h2 {
@@ -70,7 +71,7 @@ h3 {
 }
 
 h4, h5, h6 {
-	font-family: Arial, Monaco, serif;
+	font-family: Georgia, serif;
 	font-weight: normal;
 	font-size: 20px;
 }
@@ -210,7 +211,7 @@ td {
 /* Sidebar */
 
 sidebar {
-	background-color: #171717;
+	background-color: #000066;
 	color: #FDFDFB;
   width:180px;
   height:100%;
@@ -226,14 +227,15 @@ sidebar {
 	padding: 34px 25px 22px 50px;
 	margin: 30px 25px 0 0;
 	-webkit-font-smoothing: antialiased;
+        overflow: auto;
 }
 
 p.sidebar {
-	font-size: 16px;
+	font-size: 15px;
 }
 
 h1.sidebar {
-	font-family: Arial, sans-serif;
+	font-family: Georgia, serif;
 	font-size: 30px;
 	font-weight: 300;
 	line-height: 1.3em;
@@ -244,6 +246,7 @@ h1.sidebar {
 
 h1.sidebar, a.sidebar, a.name, sidebar a{
 	color: #fff;
+        font-size: 20px;
 }
 
 a.sidebar {
@@ -251,7 +254,7 @@ a.sidebar {
 }
 
 a.name {
-	white-space: nowrap;
+	white-space: wrap;
 }
 
 sidebar ul {
@@ -280,6 +283,7 @@ sidebar li {
 
 	-webkit-box-shadow: inset 0px 1px 1px 0 rgba(233,2,38, 1);
 	box-shadow: inset 0px 1px 1px 0 rgba(233,2,38, 1);
+        
 
 }
 
@@ -368,7 +372,7 @@ footer {
 
   sidebar, section, footer {
     float:none;
-    position:static;
+    position:fixed;
     width:auto;
   }
 
@@ -388,7 +392,7 @@ footer {
   }
 
   sidebar a small {
-    display:inline;
+    display:inline-block;
   }
 
   sidebar ul {
