--- a/web/styles.css
+++ b/web/styles.css
@@ -1,7 +1,7 @@
 /*Heesang's super lazy CSS*/
 
 html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
@@ -32,48 +32,8 @@ body {
 
 }
 
-h1, h2, h3, h4, h5, h6 {
-  color:#232323;
-  margin:30px 0 2px;
-}
-
 p, ul, ol, table, dl {
   margin:0 0 22px;
-}
-
-h1, h2, h3 {
-	font-family: Georgia, serif;
-        line-height:1.3;
-	font-weight: normal;
-}
-
-h1,h2, h3 {
-	display: block;
-	border-bottom: 1px solid #ccc;
-	padding-bottom: 5px;
-        font-weight: bold;
-}
-
-h1 {
-	font-size: 30px;
-        padding-top: 5px;
-        background-color:#000066;
-        text-align: center;
-        color:#FFFFFF;
-}
-
-h2 {
-	font-size: 24px;
-}
-
-h3 {
-	font-size: 20px;
-}
-
-h4, h5, h6 {
-	font-family: Georgia, serif;
-	font-weight: normal;
-	font-size: 20px;
 }
 
 a {
